<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/back_name_group"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@drawable/border"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/name_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_group"
        android:textColor="@color/dark_grey"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/down"
        android:layout_marginStart="3sp"
        android:layout_toEndOf="@id/name_group"
        android:layout_marginTop="20sp"
        />

    <TextView
        android:id="@+id/search"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:background="@drawable/search"
        android:layout_marginStart="210sp"
        android:layout_toEndOf="@id/down"
        android:layout_marginTop="20sp"
        />

    <TextView
        android:id="@+id/menu"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:background="@drawable/menu"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/search"
        android:layout_marginTop="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:orientation="horizontal"
        android:layout_below="@id/back_name_group"
        >
        <TextView
            android:id="@+id/shedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shedule"
            android:textColor="@color/grey"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20sp"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/all_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_tasks"
            android:textColor="@color/grey"
            android:layout_marginStart="80sp"
            android:layout_marginTop="20sp"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/subjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjects"
            android:textColor="@color/grey"
            android:layout_marginStart="75sp"
            android:layout_marginTop="20sp"
            android:textSize="11sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/my_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_tasks"
        android:layout_below="@+id/back_name_group"
        android:textColor="@color/dark_grey"
        android:layout_marginStart="20sp"
        android:layout_marginTop="60sp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/first_elem"
        android:layout_marginTop="20sp"
        android:layout_width="115sp"
        android:layout_height="170sp"
        android:layout_marginStart="20sp"
        android:layout_below="@+id/my_tasks"
        android:background="@drawable/with_border" />

    <TextView
        android:id="@+id/first_date"
        android:layout_marginTop="30sp"
        android:layout_marginStart="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_date"
        android:textSize="11sp"
        android:textColor="@color/grey"
        android:layout_below="@+id/my_tasks" />

    <TextView
        android:id="@+id/first_subject"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/first_subject"
        android:textSize="11sp"
        android:textColor="@color/grey"
        android:layout_below="@+id/first_date" />

    <TextView
        android:id="@+id/first_task"
        android:layout_marginTop="45sp"
        android:layout_marginStart="30sp"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/first_task"
        android:textSize="11sp"
        android:textColor="@color/dark_grey"
        android:layout_below="@+id/first_subject" />

    <TextView
        android:id="@+id/second_elem"
        android:layout_marginTop="20sp"
        android:layout_width="115sp"
        android:layout_height="170sp"
        android:layout_marginStart="30sp"
        android:layout_toEndOf="@id/first_elem"
        android:layout_below="@+id/my_tasks"
        android:background="@drawable/with_border" />

    <TextView
        android:id="@+id/second_date"
        android:layout_marginTop="30sp"
        android:layout_marginStart="95sp"
        android:layout_toEndOf="@id/first_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_date"
        android:textSize="11sp"
        android:textColor="@color/grey"
        android:layout_below="@+id/my_tasks" />

    <TextView
        android:id="@+id/second_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_date"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@id/first_subject"
        android:text="@string/second_subject"
        android:textColor="@color/grey"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/second_task"
        android:layout_marginTop="70sp"
        android:layout_marginStart="50sp"
        android:layout_width="90sp"
        android:layout_height="wrap_content"
        android:text="@string/second_task"
        android:layout_toEndOf="@id/first_task"
        android:textSize="11sp"
        android:textColor="@color/dark_grey"
        android:layout_below="@+id/second_subject" />

    <TextView
        android:id="@+id/third_elem"
        android:layout_marginTop="20sp"
        android:layout_width="115sp"
        android:layout_height="170sp"
        android:layout_marginStart="30sp"
        android:layout_toEndOf="@id/second_elem"
        android:layout_below="@+id/my_tasks"
        android:background="@drawable/with_border" />

    <TextView
        android:id="@+id/third_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_tasks"
        android:layout_marginStart="86dp"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@id/second_date"
        android:text="@string/third_date"
        android:textColor="@color/grey"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/third_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/third_date"
        android:layout_marginStart="72dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@id/second_subject"
        android:text="@string/third_subject"
        android:textColor="@color/grey"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/third_task"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/third_subject"
        android:layout_marginStart="54dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/second_task"
        android:text="@string/third_task"
        android:textColor="@color/dark_grey"
        android:textSize="11sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="358dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430sp"
        android:layout_marginStart="20sp"
        android:text="@string/today"
        android:textSize="16sp"
        android:textColor="@color/dark_grey"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430sp"
        android:layout_marginStart="320sp"
        android:text="@string/date"
        android:textSize="11sp"
        android:textColor="@color/grey"/>

    <TextView
        android:id="@+id/shed_sub_1"
        android:layout_width="335sp"
        android:layout_height="40sp"
        android:layout_marginStart="50sp"
        android:layout_marginTop="480sp"
        android:background="@drawable/base" />

    <TextView
        android:id="@+id/active_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="365sp"
        android:layout_marginTop="491sp"
        android:text="@string/active_1"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/add_1"
        android:layout_width="15sp"
        android:layout_height="15sp"
        android:background="@drawable/add"
        android:layout_marginStart="53sp"
        android:layout_marginTop="490sp"
        />

    <TextView
        android:id="@+id/text_sub_1"
        android:layout_width="335sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="490sp"
        android:textColor="@color/dark_grey"
        android:text="@string/text_sub_1"
        android:textAlignment="center"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/top_time_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480sp"
        android:layout_marginStart="12sp"
        android:text="@string/top_time_1"
        android:textSize="10sp"
        android:textColor="@color/dark_grey"/>

    <TextView
        android:id="@+id/bot_time_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9sp"
        android:layout_marginStart="12sp"
        android:layout_below="@id/top_time_1"
        android:text="@string/bot_time_1"
        android:textColor="@color/grey"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/shed_sub_2"
        android:layout_below="@+id/shed_sub_1"
        android:layout_width="335sp"
        android:layout_height="40sp"
        android:layout_marginStart="50sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/base"/>

    <TextView
        android:id="@+id/active_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="365sp"
        android:layout_marginTop="53sp"
        android:layout_below="@id/active_1"
        android:text="@string/active_2"
        android:textSize="10sp"/>
    <TextView
        android:id="@+id/add_2"
        android:layout_width="15sp"
        android:layout_height="15sp"
        android:background="@drawable/add"
        android:layout_below="@id/add_1"
        android:layout_marginStart="53sp"
        android:layout_marginTop="53sp"
        />

    <TextView
        android:id="@+id/text_sub_2"
        android:layout_width="335sp"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_grey"
        android:layout_marginStart="50sp"
        android:layout_marginTop="50sp"
        android:layout_below="@id/text_sub_1"
        android:text="@string/text_sub_2"
        android:textAlignment="center"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/top_time_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="12sp"
        android:text="@string/top_time_2"
        android:textSize="10sp"
        android:layout_below="@id/bot_time_1"
        android:textColor="@color/dark_grey"/>

    <TextView
        android:id="@+id/bot_time_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9sp"
        android:layout_marginStart="12sp"
        android:layout_below="@id/top_time_2"
        android:text="@string/bot_time_2"
        android:textColor="@color/grey"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/shed_sub_3"
        android:layout_below="@+id/shed_sub_2"
        android:layout_width="335sp"
        android:layout_height="40sp"
        android:layout_marginStart="50sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/base"/>

    <TextView
        android:id="@+id/active_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="365sp"
        android:layout_marginTop="50sp"
        android:layout_below="@id/active_2"
        android:text="@string/active_3"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/add_3"
        android:layout_width="15sp"
        android:layout_height="15sp"
        android:background="@drawable/add"
        android:layout_below="@id/add_2"
        android:layout_marginStart="53sp"
        android:layout_marginTop="50sp"
        />

    <TextView
        android:id="@+id/text_sub_3"
        android:layout_width="335sp"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_grey"
        android:layout_marginStart="50sp"
        android:layout_marginTop="50sp"
        android:layout_below="@id/text_sub_2"
        android:text="@string/text_sub_3"
        android:textAlignment="center"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/top_time_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="12sp"
        android:text="@string/top_time_3"
        android:textSize="10sp"
        android:layout_below="@id/bot_time_2"
        android:textColor="@color/dark_grey"/>

    <TextView
        android:id="@+id/bot_time_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9sp"
        android:layout_marginStart="12sp"
        android:layout_below="@id/top_time_3"
        android:text="@string/bot_time_3"
        android:textColor="@color/grey"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/shed_sub_4"
        android:layout_below="@+id/shed_sub_3"
        android:layout_width="335sp"
        android:layout_height="40sp"
        android:layout_marginStart="50sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/base"/>

    <TextView
        android:id="@+id/active_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="365sp"
        android:layout_marginTop="53sp"
        android:layout_below="@id/active_3"
        android:text="@string/active_4"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/add_4"
        android:layout_width="15sp"
        android:layout_height="15sp"
        android:background="@drawable/add"
        android:layout_below="@id/add_3"
        android:layout_marginStart="53sp"
        android:layout_marginTop="50sp"
        />

    <TextView
        android:id="@+id/text_sub_4"
        android:layout_width="335sp"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_grey"
        android:layout_marginStart="50sp"
        android:layout_marginTop="50sp"
        android:layout_below="@id/text_sub_3"
        android:text="@string/text_sub_4"
        android:textAlignment="center"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/top_time_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="12sp"
        android:text="@string/top_time_4"
        android:textSize="10sp"
        android:layout_below="@id/bot_time_3"
        android:textColor="@color/dark_grey"/>

    <TextView
        android:id="@+id/bot_time_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9sp"
        android:layout_marginStart="12sp"
        android:layout_below="@id/top_time_4"
        android:text="@string/bot_time_4"
        android:textColor="@color/grey"
        android:textSize="10sp"/>

</RelativeLayout>
