<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity_Page_4">

    <TextView
        android:id="@+id/back_name_group"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/search"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu"
        app:layout_constraintStart_toEndOf="@id/search"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/group_"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skipped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="40sp"
        android:text="@string/skipped_"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_name_group" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subjectRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_name_group" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="@+id/skipped"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/skipped"
        app:srcCompat="@drawable/frame_4" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_name_group"
        app:srcCompat="@drawable/frame_4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/time_"
        android:textColor="@color/dark_grey"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:text="@string/subject_2"
        android:textColor="@color/dark_grey"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/skipped" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="@+id/group"
        app:layout_constraintStart_toStartOf="@+id/group"
        app:layout_constraintTop_toTopOf="@+id/group"
        app:srcCompat="@drawable/down" />

</androidx.constraintlayout.widget.ConstraintLayout>
