<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/subjectName"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:maxLines="3"
        android:text="@string/subjectExample"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/subject_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp">

            <TextView
                android:id="@+id/timeString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/timeExample"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dateString" />

            <TextView
                android:id="@+id/dateString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/dateExample"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/taskName"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:elegantTextHeight="true"
                android:gravity="top|left"
                android:maxWidth="200dp"
                android:maxHeight="50dp"
                android:maxLines="10"
                android:text="@string/taskExample"
                android:textColor="@color/dark_grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/taskElementMenuButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/points" />

            <ImageView
                android:id="@+id/reminderStatus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="reminder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskName"
                app:layout_constraintVertical_bias="1.0"
                tools:srcCompat="@android:drawable/ic_lock_idle_alarm" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="193dp"
        android:layout_marginEnd="218dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_card" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="236dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectName" />

</androidx.constraintlayout.widget.ConstraintLayout>
